Fixed white space below

--- a/src/ecsl/static/css/style.css
+++ b/src/ecsl/static/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container{
-    padding-bottom: 40px;
+    padding-bottom: 10px;
 }
 
 footer {
@@ -16,12 +16,14 @@ footer {
     color: white;
     text-align: center;
     height: 40px;
-    margin-top: 5px;
 }
 
 footer ul{
+    line-height: 0px;
     padding: 0px;
     margin-bottom: 0px;
+    padding-top: 10px;
+
 }
 
 i {
@@ -37,7 +39,6 @@ i:hover {
     font-size: 30px;
     text-align: right;
     padding-right: 20px;
-
 }
 
 .contact-container {
@@ -50,10 +51,6 @@ i:hover {
 .text_footer {
     padding-top: 10px;
     font-size: 15px;
-}
-
-.contact-ul {
-    padding-top: 10px;
 }
 
 a {
@@ -70,7 +67,7 @@ ul {
 }
 
 .social-media{
-    padding: 0px;
+    padding-top: 6px;
 }
 
 .bg-inverse{
